Remove fix-wrap from Board-contents

--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,6 @@
 
 .Board-contents {
   display: flex;
-  flex-wrap: wrap;
 }
 
 .Board-CreateLists {
